# ChangeLog for media-libs/freeimage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.30 2013/09/08 05:09:39 gienah Exp $

  08 Sep 2013; Mark Wright <gienah@gentoo.org>
  files/freeimage-3.15.4-libjpeg-turbo.patch.gz, freeimage-3.15.4.ebuild:
  The fix for libjpeg-turbo is only applied when libjpeg-turbo is installed.

  08 Sep 2013; Mark Wright <gienah@gentoo.org>
  +files/freeimage-3.15.4-libjpeg-turbo.patch.gz, freeimage-3.15.4.ebuild:
  Thanks to Christian Heimes for porting freeimage to use libjpeg-turbo,
  freeimage-3.15.4-libjpeg-turbo.patch.gz is from Christian's fork at
  https://bitbucket.org/tiran/freeimageturbo. Fixes bug 479476. Thanks to
  Aleksander for reporting, Samuli Suominen, SpanKY for comments on how it
  should be fixed.

  13 Jun 2013; Michael Weber <xmw@gentoo.org> freeimage-3.15.3-r2.ebuild,
  freeimage-3.15.3.ebuild, freeimage-3.15.4.ebuild:
  Depend on SLOT=0 of media-libs/openjpeg (bug 440086)

  28 May 2013; Julian Ospald <hasufell@gentoo.org> freeimage-3.15.4.ebuild,
  +files/freeimage-3.15.4-raw.patch:
  fix building with raw useflag enabled wrt #458516

  21 Mar 2013; Sébastien Fabbro <bicatali@gentoo.org> freeimage-3.15.4.ebuild:
  Keyword amd64-linux and x86-linux

*freeimage-3.15.4 (19 Feb 2013)

  19 Feb 2013; Mike Frysinger <vapier@gentoo.org>
  +files/freeimage-3.15.4-unbundling.patch, +freeimage-3.15.4.ebuild:
  Version bump.

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> freeimage-3.15.3-r2.ebuild:
  Stable for x86, wrt bug #457120

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> freeimage-3.15.3-r2.ebuild:
  Stable for amd64, wrt bug #457120

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -freeimage-3.15.3-r1.ebuild:
  old

*freeimage-3.15.3-r2 (10 Jan 2013)

  10 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/freeimage-3.15.3-r2-unbundling.patch, +freeimage-3.15.3-r2.ebuild: