@@ -4,22 +4,22 @@ Hash: SHA256
 AUX freeimage-3.15.3-r1-unbundling.patch 8855 SHA256 e4fcf7c853ffa8ad59f09e09c53c9eb23eb2589ce16e6facb423ac6c74b6eb71 SHA512 d8b69f8add6016ee0204b4916608d17888f6945e8c67cc89b3e5846bbf945443c58a3b096697e0d3018c993fb6b54f59e95db71619fc481c4f1f54da5c10adb1 WHIRLPOOL f7f916fae38ba5630132b67f343fa9e5b95940864bd2bb12340c0be0c3eaefa1a1c6f279f5e03c09f0add70a9ec949bab2ef10e88fcb5bc132d97814e7faf04e
 AUX freeimage-3.15.3-r2-unbundling.patch 17182 SHA256 8fe72d50ca18b98041d70e8bd53dc681b6c59dbdf1ac142e01233009a5e6e452 SHA512 473d9ede61b1edeac78ff7b460949247f245cda67dc514c96f4bde957aa7f94cb4cad39dd7165719b58a956a1ec754204af5798b41ff0bd9379a06fd2b31a910 WHIRLPOOL f15e13ffefa477434970a3172b3c6a464f77ae390ccff9ae1e089721cf926a78ac17967b11c599d4d80ee31231b070f9e604803e956b4db8d565d46f985b015c
 AUX freeimage-3.15.3-unbundling.patch 9053 SHA256 b98d92187eb34518a6219a45f0a71e0cc7909df7583b886069392264d4cc2ff4 SHA512 02f6bfd62bb54370d65660249bf7fa7e27dea0aeeabea782a47748baad119f6635ac5954449989aa487deda27739ad6dd8db42e287e3e1e70b211495b0643650 WHIRLPOOL ed2b4e7c0208a2d8e1177f3ff09e8d2a108ab57721846ec06ee68546ca591929f8df4130b327d66e384b63eef201ee955eb2fe7a5309a9b302494c5ce0c6878e
-AUX freeimage-3.15.4-libjpeg-turbo.patch.gz 5386 SHA256 e33374db55d1de1f12357138c1a2dac750957c36da9ed6052c1a6084312737a6 SHA512 8b1be0d1b63c5e0dc4f6c841f569929d7a91738c29d86bb3c3f15dd7a5a198bdc5fc6612668ac6ed263674caae1e07520eae003a5adf7395e0539f2820d888f6 WHIRLPOOL 75b8f3486ae9ebf34e7467068b0d93d1a9cc4539e27c6cbb29b617d41459333b0dc263f4003a8d81628922c1fb562452dfa39829eef721898809d40ede9498a9
 AUX freeimage-3.15.4-raw.patch 350 SHA256 78bf8997dc5d8da113eb2fdb7d6efbdf97641e1dd4b1d5623bbddf01ffcdde0f SHA512 2429bec7ec8f4963d3b0bd658093e8c3ff83d8ea5d934beb28526b80e89cb3aee6fe849800d80a81680614fa98e962744ced33ee198e04e32fc4be4d105e528b WHIRLPOOL 9de8738e401889fef8b8c95ea83e9322dd2fd2a5c898718696e5c0b6f45308e1ab62ec5a40449205e275f91e5fb1107aa3db055337747d657d3531991442c0f0
 AUX freeimage-3.15.4-unbundling.patch 17182 SHA256 929f45e21c5be7751f21b9f4d98a3c2ae248559ac371e053d66e4d8905eecf78 SHA512 b9f7b2f1767eabe3db44a4328d4211ee80ba719d4f2715f7bb7988f19029d5867da068c78a02f50bf513fc7b88da857795fd0fc0eb9b837f3f999e8951b2debd WHIRLPOOL 62137afc748227b98145c7625fe26348c6bfb21dd569e3b9b095a69c7d503ecfc99c52b40dfdd0dd9b83415fc70f9d03aba168bc98025e6b360522073f1d42b4
 DIST FreeImage3153.pdf 1004540 SHA256 325767978f0208a6dd2d2f6cb1cc184cea6aec843d9948a051c41b6a16284546 SHA512 91775a5ec9227fc5a42431383157d82d2d2bd40b92e234518e4b347cfd20c873fb29ec84289d7bdee127b01c02b9eb5da24c386d6f78a7346684fccee158f939 WHIRLPOOL afdad90143a9ed3a62fa8dd0666355fdeaa3689e15873778b47927f6a6c170da88d7891f94f5889c94a5a54d608845c16a6c033a65afc9477d9deec9f12af5ee
 DIST FreeImage3153.zip 4681769 SHA256 4618d59f2d9a20583b0f5fec99dcf832ccc3f317897b10592b85e7648375c044 SHA512 2cc38218cf1e8d403faa71d2337009ff6c0c60e1833eea2e19ddaf2fedba001198f4bff9805c4e815653d7bee79bac6a9132a7c9af69f59d5ee1cae531ad2069 WHIRLPOOL 89f8ecd1152d303b7c5613314ab7f2b68d66fb5c1cccf214e58a8c031a6d22ad842a5b37240ab38d9f6eb035f6d6a688afe6591da9c22898e882b1baecac0e50
 DIST FreeImage3154.pdf 1007480 SHA256 455b0ba7cf571f3fc3027681a70abf3c2321d0a4fd7956c5ba58bd7ccb7b5373 SHA512 cebde5e2609c9a0c06b4e07e1c595d7d6714895095cd9935f59c8b2ff9b34116248f5453b41f469f6242d87cae79be82d59f6a9ec0f75b1ea3df61ac1f651b28 WHIRLPOOL a1e8b575d198b61e74db9eb31e9472460158e86989ed822c156cae3f625f6ea0d156e4b7ddffc8b7a1d16a601be39b4cf0e20558d36bb4dd73195fea4faa43e7
 DIST FreeImage3154.zip 5513923 SHA256 eb6361519d33131690a0e726b085a05825e5adf9fb72c752d8d39100e48dc829 SHA512 0db9eb7d0ed8e08e10ff4fa274c4484541ca119c3d437a85fdc3b2d9232bf14a7877c79b1e62c8c99278d7020a9f623c161f2342475f3ee526233404138112cc WHIRLPOOL 2747bb7a35d8de24a1a876616626a9e840495f06da836ce15135aafaa21bc1d8d9cece17f7512424b66edfcc521ed096ea85da5ea5b5b90b4c032bf080356b4d
+DIST freeimage-3.15.4-libjpeg-turbo.patch.gz 5386 SHA256 e33374db55d1de1f12357138c1a2dac750957c36da9ed6052c1a6084312737a6 SHA512 8b1be0d1b63c5e0dc4f6c841f569929d7a91738c29d86bb3c3f15dd7a5a198bdc5fc6612668ac6ed263674caae1e07520eae003a5adf7395e0539f2820d888f6 WHIRLPOOL 75b8f3486ae9ebf34e7467068b0d93d1a9cc4539e27c6cbb29b617d41459333b0dc263f4003a8d81628922c1fb562452dfa39829eef721898809d40ede9498a9
 EBUILD freeimage-3.15.3-r2.ebuild 2540 SHA256 6d3722b7cafa8388d4f55efd476017a1e5373a49b0fbd18e054ce9a7c15c2020 SHA512 b37788202b29c761568b91b9f6ef6e5e1ad1dd30062b63873396809f1c15f2d10a3d383980e8f24700a4642c35edd70402188db500869050715db1419d21a897 WHIRLPOOL bd6f7a07d7264574ad7d4a481eb6b850ed881af7c6f1e33ceb5b3711334c134eb72ebe66494793d3c1b67b08bf5d22008c051189d229ff009af0c0f09887cc06
 EBUILD freeimage-3.15.3.ebuild 2548 SHA256 56de555ae952db2e4c187fa129b543457ad29e898cef278221748548a0c6f4af SHA512 6add24bbea4c29a2fd80a5f52e2d8b97b8cc94139a541afb5d02fe58d2a9f5992a58f375c037f3a5616f7dd8771b7605bb24171998e09c72e2b61421565098de WHIRLPOOL 930a83378177a9489e9ae20ac9b3d22db4dc732b82d3a806cd0d1fc6103b4c0fb909048a61ecf8d99899dc9ea38a164ff35a10a8d44e2e1019b1b8b7edb3d21d
-EBUILD freeimage-3.15.4.ebuild 2835 SHA256 99906894847535c2e5e6dc408a670dcb8a8ed58b71b616a58b77fc56c92e217c SHA512 e5eb035aa9cb691e9b7d8e2a9308904b24c31bd417298324f205f05716e7f4c7478a63f190bd40ab029fcd823f73c9c53d37d0b9f61f6c534ddcecb43ef336bb WHIRLPOOL d2b9e5f5d409d44e8a98b92cc03ef456b4534650aaaafafdd84a3da1dd651ac7fa7540ce69c0467b97e3511beb245542c436a6ab4dcd76be4130df448885791e
-MISC ChangeLog 4846 SHA256 2bad63605644295bb86bbdd67fec4ad3293257f39d514f23825a0fd45658d0a0 SHA512 f5b61e25eade0102cc6ad9b12588bf47b47887ea3331807cb95448d6e195c8cc970b90f1054027eda2e4e613a706136af5552ce501916245e4b10f5977a79a3e WHIRLPOOL 2a03ed519de2edc06c389cf9c772106c75ad85f6f0fb3343de1533af891cc03a7a5de53352515ad598a139c71bea0add8d2426eed6a2e5428fe7463cb8b279b9
+EBUILD freeimage-3.15.4.ebuild 2932 SHA256 b99ed5af51fd7f7808be0f375a514670631f531bbdfb823fab98722cadc1841e SHA512 3e9c09fa5326dc77f7174932ed2c38153d850d0c1ea1fa32539b02ad53924c03b37d87820d3ad049fe3d52ef0b2b67a82c533d950944dac31c27adee36402b98 WHIRLPOOL b93dfd63c7c89cd9b97ca22d50aaf9b0e368ffd92e89d0d1d78a82707409bc6450e2da13dff5d4a3097b3ed42a9dc563099c27e52af30f803ef5b284e9586a75
+MISC ChangeLog 5049 SHA256 2fd193b63fe8a9418cce4e0a020d5da48aada4d0e8b2ea377adaabcefc3f55fc SHA512 f1152fdf14c3ff456e3539b7fef18050acd9f6bafaf7802f7d5544c8420debf8d02b7960fe0448c8d47a993f78960d1f3a50603dfacb66dd97b9ce30d889cbf9 WHIRLPOOL f96c5cf3681b768ea6df7f1ccb3be404615b5c83d3c9733db4f3d84336753229382a4ab11346779315ef86492aa4f9de9fca2fe7978616747ab24419205b625e
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlIsBhIACgkQoBEVQmGOlx9y0AD+KSxCdOghIe7x2Z1pOBynUNeE
-mUgfGZjzhgS+NXPe8DEBANo7iqXHVcHyHzSTf+8EsKjliSzwyuuHlAoGZVWr07qJ
-=kRvK
+iF4EAREIAAYFAlIsGd4ACgkQoBEVQmGOlx/h6QEAjfmlvh+yXLhqVn/c2+nO/AxO
+j/uiH1greVbBmQ+i2woA/jRUjgtfp7vG8lnyvhjYBc7q6ZV+rG8HD5VkliY14Zr/
+=DWSn
 -----END PGP SIGNATURE-----
