@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/freeimage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.30 2013/09/08 05:09:39 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.31 2013/09/08 06:34:14 gienah Exp $
+
+  08 Sep 2013; Mark Wright <gienah@gentoo.org>
+  -files/freeimage-3.15.4-libjpeg-turbo.patch.gz, freeimage-3.15.4.ebuild:
+  Thanks to radhermit for advising I need to move the patch to dev.gentoo.org/~
 
   08 Sep 2013; Mark Wright <gienah@gentoo.org>
   files/freeimage-3.15.4-libjpeg-turbo.patch.gz, freeimage-3.15.4.ebuild:
